--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/dari-ko/PlayPlex/issues"
   },
-  "homepage": "https://github.com/dari-ko/PlayPlex#readme"
+  "homepage": "https://github.com/dari-ko/PlayPlex#readme",
+  "dependencies": {
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
+  }
 }
